# Water-Tank-Monitoring

./: .gitignore  README.md  pyrightconfig.json  render.yaml
backend/: main.py  pyproject.toml  requirements.txt
firmware/: platformio.ini
firmware/include/: sdkconfig.h
firmware/src/: main.cpp
frontend/: .env  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
