[project]
name = "water-tank-backend"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "pydantic>=2.5.3",
]

[tool.pylance]
workspace = { fallthrough = true }
pythonPath = "D:/WaterTankMonitor/venv312/Scripts/python.exe"